--- a/MyBlazorInAction03/BiA03FrmScrSvr/Core/CoreApp.razor
+++ b/MyBlazorInAction03/BiA03FrmScrSvr/Core/CoreApp.razor
@@ -1,8 +1,11 @@
 <Router AppAssembly="@typeof(CoreApp).Assembly">
-    <Found>
-        <p>Found</p>
+    <Found Context="routeData">
+        <RouteView RouteData="@routeData" DefaultLayout="@typeof(MainLayout)" />
     </Found>
     <NotFound>
-        <p>Not Found</p>
+        <PageTitle>Not found</PageTitle>
+        <LayoutView Layout="@typeof(MainLayout)">
+            <h2>404: There's nothing at this address.</h2>
+        </LayoutView>
     </NotFound>
 </Router>
