--- a/MyBlazorInAction03/BiAFrmScrSvr01/Core/Layouts/MainLayout.razor
+++ b/MyBlazorInAction03/BiAFrmScrSvr01/Core/Layouts/MainLayout.razor
@@ -1,10 +1,9 @@
 ﻿@inherits LayoutComponentBase
 
-
-<nav>
+<div class="">
     <NavMenu />
-</nav>
-
-<main>
-    @Body
-</main>
+    
+    <main>
+        @Body
+    </main>
+</div>
