--- a/MyBlazorInAction03/BiAFrmScrSvr01/Core/Components/NavMenu.razor
+++ b/MyBlazorInAction03/BiAFrmScrSvr01/Core/Components/NavMenu.razor
@@ -1,6 +1,6 @@
 ﻿<nav class="bg-gray-300 shadow-lg">
 
-    <div class=" max-w-6xl mx-auto px-4">
+    <div class="max-w-6xl px-4 mx-auto ">
         <div class="flex justify-between">
             <div class="flex space-x-1">
                 <!-- logo -->
@@ -8,12 +8,12 @@
                     <div class="text-lg text-blue-500">Logo</div>
                 </div>
                 <!-- main nav -->
-                <div class="hidden sm:flex justify- space-x-1 px-24 ">
+                <div class="hidden px-24 space-x-1 sm:flex justify- ">
                     <NavLink class="btn-blue">Home</NavLink>
                     <NavLink class="btn-blue">Counter</NavLink>
                 </div>
 
-                <div class="hidden sm:flex justify-end space-x-3">
+                <div class="justify-end hidden space-x-3 sm:flex">
                     <NavLink>Log in</NavLink>
                     <NavLink>Sign Up</NavLink>
                 </div>
@@ -21,14 +21,9 @@
         </div>
 
         <div class="sm:hidden">
-            <button onclick="@OnMenuClick">
-                <svg xmlns="http://www.w3.org/2000/svg" class="w-6 h-6" fill="none" viewBox="0 0 24 24"
-                    stroke="currentColor">
-                    <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h16M4 18h16" />
-                </svg>
-            </button>
+            <HambergerButton CollapseNaveMenu="@collapseNavMenu" ToggleNavMenu="@ToggleNavMenu" />
 
-            <div class="flex @(showMobileMenu ? "" : "hidden")">
+            <div class="flex @navMenuClass">
                 <NavLink class="">Home</NavLink>
                 <NavLink class="">Counter</NavLink>
             </div>
@@ -37,9 +32,12 @@
 </nav>
 
 @code {
-    bool showMobileMenu { get; set; } = false;
-    void OnMenuClick(MouseEventArgs e)
+    bool collapseNavMenu { get; set; } = true;
+    string navMenuClass => collapseNavMenu ? "hidden" : "";
+
+    void ToggleNavMenu()
     {
-        showMobileMenu = !showMobileMenu;
+        collapseNavMenu =! collapseNavMenu;
     }
+
 }
