--- a/MyBlazorInAction03/BiAFrmScrSvr01/Core/_Imports.razor
+++ b/MyBlazorInAction03/BiAFrmScrSvr01/Core/_Imports.razor
@@ -1,5 +1,5 @@
 ﻿@using Microsoft.AspNetCore.Components.Web
 @using Microsoft.AspNetCore.Components.Routing
-
+@using Core
 @using Core.Components
 @using Core.Layouts
