--- a/MyBlazorInAction03/BiA03Svr/Core/Shared/MainLayout.razor
+++ b/MyBlazorInAction03/BiA03Svr/Core/Shared/MainLayout.razor
@@ -2,9 +2,11 @@
 
 <PageTitle>Server</PageTitle>
 
-<div class="">
+<div>
+<header>
     <NavMenu />
-    <main class="container mx-auto">
-        @Body
-    </main>
+</header>
+<main>
+    @Body
+</main>
 </div>
