--- a/MyBlazorInAction03/BiA03Svr/Server/Pages/_Layout.cshtml
+++ b/MyBlazorInAction03/BiA03Svr/Server/Pages/_Layout.cshtml
@@ -11,7 +11,7 @@
     <link href="_content/Core/css/styles.css" rel="stylesheet" />
     <component type="typeof(HeadOutlet)" render-mode="ServerPrerendered" />
 </head>
-<body>
+<body  class="antialiased bg-gradient-to-r from-pink-300 via-purple-300 to-indigo-400" >
     @RenderBody()
 
     <script src="_framework/blazor.server.js"></script>
