--- a/MyBlazorInAction03/BiA03Svr/Core/Styles/Styles.css
+++ b/MyBlazorInAction03/BiA03Svr/Core/Styles/Styles.css
@@ -10,15 +10,19 @@
     h2 {
         @apply text-2xl
     }
+
+    h3 {
+        @apply text-xl
+    }
 }
 
 @layer components {
     .activeBtn {
-        @apply bg-gray-900 text-white px-3 py-1 rounded-md text-sm font-medium;
+        @apply px-3 py-1 text-sm font-medium text-gray-200 rounded-md bg-gray-700 border-2 border-gray-900
     }
-
+    
     .inactiveBtn {
-        @apply hover:bg-gray-500 hover:text-white px-3 py-1 rounded-md text-sm font-medium;
+        @apply px-3 py-1 text-sm font-medium rounded-md hover:bg-gray-500 hover:text-white;
     }
 }
 
