--- a/MyBlazorInAction03/BiA03Svr/Core/Styles/Styles.css
+++ b/MyBlazorInAction03/BiA03Svr/Core/Styles/Styles.css
@@ -8,21 +8,25 @@
     }
 
     h2 {
-        @apply text-2xl
+        @apply text-2xl;
     }
 
     h3 {
-        @apply text-xl
+        @apply text-xl;
     }
 }
 
 @layer components {
     .activeBtn {
-        @apply px-3 py-1 text-sm font-medium text-gray-200 rounded-md bg-gray-700 border-2 border-gray-900
+        @apply sm:px-1 sm:py-1 md:px-3 md:py-1 text-sm font-medium text-gray-200 rounded-md bg-gray-600 border-2 border-gray-900
     }
-    
+
     .inactiveBtn {
-        @apply px-3 py-1 text-sm font-medium rounded-md hover:bg-gray-500 hover:text-white;
+        @apply sm:px-1 sm:py-1 md:px-3 md:py-1 text-sm font-medium rounded-md hover:bg-gray-500 hover:text-white;
+    }
+
+    .navMenu {
+        @apply block md:p-2 hover:text-purple-400;
     }
 }
 
