--- a/MyBlazorInAction03/BiA03Svr/Core/wwwroot/css/styles.css
+++ b/MyBlazorInAction03/BiA03Svr/Core/wwwroot/css/styles.css
@@ -596,14 +596,6 @@ video {
 }
 
 *, ::before, ::after {
-  --tw-translate-x: 0;
-  --tw-translate-y: 0;
-  --tw-rotate: 0;
-  --tw-skew-x: 0;
-  --tw-skew-y: 0;
-  --tw-scale-x: 1;
-  --tw-scale-y: 1;
-  --tw-transform: translateX(var(--tw-translate-x)) translateY(var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
   --tw-border-opacity: 1;
   border-color: rgba(229, 231, 235, var(--tw-border-opacity));
   --tw-ring-offset-shadow: 0 0 #0000;
@@ -678,11 +670,7 @@ h3 {
   --tw-border-opacity: 1;
   border-color: rgba(17, 24, 39, var(--tw-border-opacity));
   --tw-bg-opacity: 1;
-  background-color: rgba(55, 65, 81, var(--tw-bg-opacity));
-  padding-left: 0.75rem;
-  padding-right: 0.75rem;
-  padding-top: 0.25rem;
-  padding-bottom: 0.25rem;
+  background-color: rgba(75, 85, 99, var(--tw-bg-opacity));
   font-size: 0.875rem;
   line-height: 1.25rem;
   font-weight: 500;
@@ -690,12 +678,32 @@ h3 {
   color: rgba(229, 231, 235, var(--tw-text-opacity));
 }
 
+@media (min-width: 320px) {
+  .activeBtn {
+    padding-left: 0.25rem;
+    padding-right: 0.25rem;
+  }
+
+  .activeBtn {
+    padding-top: 0.25rem;
+    padding-bottom: 0.25rem;
+  }
+}
+
+@media (min-width: 640px) {
+  .activeBtn {
+    padding-left: 0.75rem;
+    padding-right: 0.75rem;
+  }
+
+  .activeBtn {
+    padding-top: 0.25rem;
+    padding-bottom: 0.25rem;
+  }
+}
+
 .inactiveBtn {
   border-radius: 0.375rem;
-  padding-left: 0.75rem;
-  padding-right: 0.75rem;
-  padding-top: 0.25rem;
-  padding-bottom: 0.25rem;
   font-size: 0.875rem;
   line-height: 1.25rem;
   font-weight: 500;
@@ -706,6 +714,45 @@ h3 {
   background-color: rgba(107, 114, 128, var(--tw-bg-opacity));
   --tw-text-opacity: 1;
   color: rgba(255, 255, 255, var(--tw-text-opacity));
+}
+
+@media (min-width: 320px) {
+  .inactiveBtn {
+    padding-left: 0.25rem;
+    padding-right: 0.25rem;
+  }
+
+  .inactiveBtn {
+    padding-top: 0.25rem;
+    padding-bottom: 0.25rem;
+  }
+}
+
+@media (min-width: 640px) {
+  .inactiveBtn {
+    padding-left: 0.75rem;
+    padding-right: 0.75rem;
+  }
+
+  .inactiveBtn {
+    padding-top: 0.25rem;
+    padding-bottom: 0.25rem;
+  }
+}
+
+.navMenu {
+  display: block;
+}
+
+.navMenu:hover {
+  --tw-text-opacity: 1;
+  color: rgba(167, 139, 250, var(--tw-text-opacity));
+}
+
+@media (min-width: 640px) {
+  .navMenu {
+    padding: 0.5rem;
+  }
 }
 
 .mx-auto {
@@ -733,24 +780,12 @@ h3 {
   height: 1.5rem;
 }
 
-.h-4 {
-  height: 1rem;
-}
-
-.w-6 {
-  width: 1.5rem;
-}
-
 .w-full {
   width: 100%;
 }
 
-.w-auto {
-  width: auto;
-}
-
-.transform {
-  transform: var(--tw-transform);
+.w-6 {
+  width: 1.5rem;
 }
 
 .cursor-pointer {
@@ -781,6 +816,11 @@ h3 {
   border-bottom-width: 2px;
 }
 
+.bg-white {
+  --tw-bg-opacity: 1;
+  background-color: rgba(255, 255, 255, var(--tw-bg-opacity));
+}
+
 .bg-gray-800 {
   --tw-bg-opacity: 1;
   background-color: rgba(31, 41, 55, var(--tw-bg-opacity));
@@ -791,44 +831,22 @@ h3 {
   background-color: rgba(107, 114, 128, var(--tw-bg-opacity));
 }
 
-.bg-white {
-  --tw-bg-opacity: 1;
-  background-color: rgba(255, 255, 255, var(--tw-bg-opacity));
-}
-
 .bg-opacity-90 {
   --tw-bg-opacity: 0.9;
-}
-
-.bg-gradient-to-r {
-  background-image: linear-gradient(to right, var(--tw-gradient-stops));
-}
-
-.from-pink-300 {
-  --tw-gradient-from: #f9a8d4;
-  --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to, rgba(249, 168, 212, 0));
-}
-
-.via-purple-300 {
-  --tw-gradient-stops: var(--tw-gradient-from), #c4b5fd, var(--tw-gradient-to, rgba(196, 181, 253, 0));
-}
-
-.to-indigo-400 {
-  --tw-gradient-to: #818cf8;
 }
 
 .fill-current {
   fill: currentColor;
 }
 
-.px-4 {
-  padding-left: 1rem;
-  padding-right: 1rem;
-}
-
 .py-2 {
   padding-top: 0.5rem;
   padding-bottom: 0.5rem;
+}
+
+.px-4 {
+  padding-left: 1rem;
+  padding-right: 1rem;
 }
 
 .px-2 {
@@ -841,22 +859,8 @@ h3 {
   padding-bottom: 0.25rem;
 }
 
-.py-4 {
-  padding-top: 1rem;
-  padding-bottom: 1rem;
-}
-
-.pt-4 {
-  padding-top: 1rem;
-}
-
-.pt-2 {
-  padding-top: 0.5rem;
-}
-
-.text-2xl {
-  font-size: 1.5rem;
-  line-height: 2rem;
+.pt-3 {
+  padding-top: 0.75rem;
 }
 
 .text-lg {
@@ -869,13 +873,18 @@ h3 {
   line-height: 1.5rem;
 }
 
-.text-sm {
-  font-size: 0.875rem;
-  line-height: 1.25rem;
+.text-2xl {
+  font-size: 1.5rem;
+  line-height: 2rem;
 }
 
 .font-semibold {
   font-weight: 600;
+}
+
+.text-gray-700 {
+  --tw-text-opacity: 1;
+  color: rgba(55, 65, 81, var(--tw-text-opacity));
 }
 
 .text-gray-500 {
@@ -891,16 +900,6 @@ h3 {
 .text-gray-50 {
   --tw-text-opacity: 1;
   color: rgba(249, 250, 251, var(--tw-text-opacity));
-}
-
-.text-gray-700 {
-  --tw-text-opacity: 1;
-  color: rgba(55, 65, 81, var(--tw-text-opacity));
-}
-
-.antialiased {
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
 }
 
 .shadow-2xl {
@@ -937,24 +936,9 @@ h3 {
   content: "An error has occurred."
 }
 
-.hover\:text-white:hover {
-  --tw-text-opacity: 1;
-  color: rgba(255, 255, 255, var(--tw-text-opacity));
-}
-
 .hover\:text-gray-700:hover {
   --tw-text-opacity: 1;
   color: rgba(55, 65, 81, var(--tw-text-opacity));
-}
-
-.hover\:text-purple-400:hover {
-  --tw-text-opacity: 1;
-  color: rgba(167, 139, 250, var(--tw-text-opacity));
-}
-
-.focus\:text-white:focus {
-  --tw-text-opacity: 1;
-  color: rgba(255, 255, 255, var(--tw-text-opacity));
 }
 
 .focus\:text-gray-900:focus {
@@ -968,48 +952,16 @@ h3 {
 }
 
 @media (min-width: 320px) {
-  .sm\:flex {
-    display: flex;
-  }
-
   .sm\:hidden {
     display: none;
-  }
-
-  .sm\:w-auto {
-    width: auto;
   }
 
   .sm\:flex-col {
     flex-direction: column;
   }
 
-  .sm\:place-content-end {
-    place-content: end;
-  }
-
   .sm\:items-end {
     align-items: flex-end;
-  }
-
-  .sm\:items-stretch {
-    align-items: stretch;
-  }
-
-  .sm\:justify-end {
-    justify-content: flex-end;
-  }
-
-  .sm\:justify-center {
-    justify-content: center;
-  }
-
-  .sm\:justify-between {
-    justify-content: space-between;
-  }
-
-  .sm\:justify-items-end {
-    justify-items: end;
   }
 }
 
@@ -1026,10 +978,6 @@ h3 {
     width: auto;
   }
 
-  .md\:flex-shrink {
-    flex-shrink: 1;
-  }
-
   .md\:flex-row {
     flex-direction: row;
   }
@@ -1042,21 +990,9 @@ h3 {
     justify-content: space-between;
   }
 
-  .md\:p-4 {
-    padding: 1rem;
-  }
-
-  .md\:p-3 {
-    padding: 0.75rem;
-  }
-
-  .md\:p-2 {
-    padding: 0.5rem;
-  }
-
-  .md\:py-0 {
-    padding-top: 0px;
-    padding-bottom: 0px;
+  .md\:py-3 {
+    padding-top: 0.75rem;
+    padding-bottom: 0.75rem;
   }
 
   .md\:pt-0 {
