--- a/MyBlazorInAction04/BiASvr01/Core/_Imports.razor
+++ b/MyBlazorInAction04/BiASvr01/Core/_Imports.razor
@@ -1,1 +1,4 @@
 ﻿@using Microsoft.AspNetCore.Components.Web
+@using Microsoft.AspNetCore.Components.Routing
+@using Core.Shared
+@using Core.Components
