--- a/MyBlazorInAction04/BiASvr02/Core/App.razor
+++ b/MyBlazorInAction04/BiASvr02/Core/App.razor
@@ -1,8 +1,9 @@
 <Router AppAssembly="@typeof(App).Assembly">
-    <Found>
-        <p>Found</p>
+    <Found Context="routeData">
+        <RouteView RouteData="routeData" />
     </Found>
     <NotFound>
-        <p>Not Found</p>
+        <h1>Page not found</h1>
+        <p>Sorry, but there's nothing here!</p>
     </NotFound>
 </Router>
