--- a/MyBlazorInAction03/BiA03FrmScrSvr/Core/Shared/MainLayout.razor
+++ b/MyBlazorInAction03/BiA03FrmScrSvr/Core/Shared/MainLayout.razor
@@ -1,11 +1,11 @@
 @inherits LayoutComponentBase
 
 <div>
-    <NavMenu2/>
-    @* 
+@*    <NavMenu2/>
+*@     
     <nav class="h-10 bg-blue-300 shadow-lg">
         <NavMenu/>
-    </nav> *@
+    </nav> 
     <main>
         @Body
     </main>
