--- a/MyBlazorInAction05/BiA01/Core/_Imports.razor
+++ b/MyBlazorInAction05/BiA01/Core/_Imports.razor
@@ -1,1 +1,5 @@
 ﻿@using Microsoft.AspNetCore.Components.Web
+@using Microsoft.AspNetCore.Components.Routing
+
+@using Core.Components
+@using Core.Shared
