--- a/MyBlazorInAction05/BiA01/Host/Pages/Host.cshtml
+++ b/MyBlazorInAction05/BiA01/Host/Pages/Host.cshtml
@@ -9,6 +9,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Host</title>
     <base href="~/" />
+    <link href="_content/Core/css/styles.css" rel="stylesheet" />
 </head>
 <body>
     <component type="typeof(Core.CoreApp)" render-mode="ServerPrerendered" />
