--- a/MyBlazorInAction05/BiA01/Host/Pages/Host.cshtml
+++ b/MyBlazorInAction05/BiA01/Host/Pages/Host.cshtml
@@ -11,7 +11,7 @@
     <base href="~/" />
     <link href="_content/Core/css/styles.css" rel="stylesheet" />
 </head>
-<body>
+<body class="antialiased bg-blue-200">
     <component type="typeof(Core.CoreApp)" render-mode="ServerPrerendered" />
     <script src="_framework/blazor.server.js"></script>
 </body>
