--- a/MyBlazorInAction05/BiA01/Core/CoreApp.razor
+++ b/MyBlazorInAction05/BiA01/Core/CoreApp.razor
@@ -4,6 +4,8 @@
         <FocusOnNavigate RouteData="@routeData" Selector="h1" />
     </Found>
     <NotFound>
+        <LayoutView  Layout="@typeof(MainLayout)">
         Not Found
+        </LayoutView>
     </NotFound>
 </Router>
