--- a/MyBlazorInAction05/BiA01/Core/Shared/MainLayout.razor
+++ b/MyBlazorInAction05/BiA01/Core/Shared/MainLayout.razor
@@ -3,6 +3,6 @@
 <header class="bg-white ">
     <NavMenu />
 </header>
-<main>
+<main class="px-2 sm:p-4 lg:px-6 lg:py-4 max-w-max">
     @Body
 </main>
