--- a/MyBlazorInAction05/BiA01/Core/Components/NavMenu.razor
+++ b/MyBlazorInAction05/BiA01/Core/Components/NavMenu.razor
@@ -1,6 +1,6 @@
 <nav class="bg-gray-800">
     <div class="max-w-full px-2 mx-auto sm:px-4 lg:px-6">
-        <div class="relative flex items-center justify-between h-16">
+        <div class="relative flex items-center justify-between h-12">
             <div class="absolute inset-y-0 left-0 flex items-center sm:hidden">
                 <!-- Mobile menu button-->
                 <HambergerButton IsNavMenuOpen="@isNavMenuOpen" ToggleNavMenu="@ToggleNavMenu" />
@@ -12,17 +12,28 @@
                     <h3 class="text-gray-200 ">My Logo</h3>
                 </div>
                 <!-- Main Menu -->
+                @* <div class="hidden sm:block sm:ml-6">
+                    <div class="flex space-x-4">
+                    <!-- Current: "bg-gray-900 text-white", Default: "text-gray-300 hover:bg-gray-700 hover:text-white" -->
+                    <NavLink href="/" ActiveClass="active-btn" class="nav-btn" aria-current="page"
+                    Match=NavLinkMatch.All>
+                    Home</NavLink>
+                    <NavLink href="/counter" ActiveClass="active-btn" class="nav-btn">Counter</NavLink>
+                    </div>
+                    </div>
+                *@
+            </div>
+            <!-- Right Icon -->
+            <div class="absolute inset-y-0 right-0 flex items-center pr-2 sm:static sm:inset-auto sm:ml-6 sm:pr-0">
                 <div class="hidden sm:block sm:ml-6">
                     <div class="flex space-x-4">
                         <!-- Current: "bg-gray-900 text-white", Default: "text-gray-300 hover:bg-gray-700 hover:text-white" -->
                         <NavLink href="/" ActiveClass="active-btn" class="nav-btn" aria-current="page"
-                            Match=NavLinkMatch.All>Home</NavLink>
+                            Match=NavLinkMatch.All>
+                            Home</NavLink>
                         <NavLink href="/counter" ActiveClass="active-btn" class="nav-btn">Counter</NavLink>
                     </div>
                 </div>
-            </div>
-            <!-- Right Icon -->
-            <div class="absolute inset-y-0 right-0 flex items-center pr-2 sm:static sm:inset-auto sm:ml-6 sm:pr-0">
                 <BellButton />
             </div>
         </div>
@@ -39,7 +50,7 @@
 </nav>
 
 @code {
-    bool isNavMenuOpen { get; set; } = false;
+    bool isNavMenuOpen { get; set; } = true;
     string navMenuClass => isNavMenuOpen ? "" : "hidden";
     string showMobileMenu => !isNavMenuOpen ? "" : "hidden";
     void ToggleNavMenu()
