--- a/MyBlazorInAction05/BiA02/Core/Assets/Styles/Styles.css
+++ b/MyBlazorInAction05/BiA02/Core/Assets/Styles/Styles.css
@@ -33,7 +33,7 @@
     @variants responsive,
     hover {
         .nav-btn {
-            @apply px-3 py-1 text-sm font-medium text-gray-300 rounded-md hover:bg-gray-700 hover:text-white;
+            @apply px-3 py-1 text-sm font-medium text-gray-700 rounded-md hover:bg-gray-700 hover:text-white focus:bg-gray-800;
         }
 
         .mobile-btn {
