--- a/MyBlazorInAction05/BiA02/Core/Shared/MainNavMenu.razor
+++ b/MyBlazorInAction05/BiA02/Core/Shared/MainNavMenu.razor
@@ -2,19 +2,19 @@
     <div class="max-w-full px-2 mx-auto sm:px-4 lg:px-6">
         <div class="relative flex items-center justify-between h-10">
             <!-- hamberger icon -->
-            <div class="absolute inset-y-0 left-0 flex items-center sm:hidden">
-                Hamberger
+            <div class="absolute inset-y-0 right-2 flex items-center sm:hidden">
+                <HambergerButton IsNavMenuOpen="@isNavMenuOpen" ToggleNavMenu="@ToggleNavMenu" />
             </div>
             <!-- Main -->
-            <div class="flex items-center justify-center flex-1 sm:items-stretch sm:justify-start">
+            <div class="flex items-center justify-start flex-1 sm:items-stretch">
                 <!-- Logo -->
                 <div class="flex items-center flex-shrink-0">
                     <h3>Logo</h3>
                 </div>
 
                 <!-- Menu Right -->
-                <div class="absolute inset-y-0 right-0 flex items-center pr-2 sm:ml-6 sm:pr-6">
-                    <div class="hidden sm:block sm:ml-6">
+                <div class="absolute inset-y-0 right-0 flex items-center pr-2 sm:ml-4 sm:pr-0">
+                    <div class="hidden sm:block sm:ml-2">
                         <div class="flex space-x-4">
                             <NavLink ActiveClass="active-btn" class="nav-btn" href="/" Match=NavLinkMatch.All>Home
                             </NavLink>
