Update project files

--- a/MyBlazorInAction05/BiA02/Core/Features/Counter/CounterPage.razor
+++ b/MyBlazorInAction05/BiA02/Core/Features/Counter/CounterPage.razor
@@ -2,8 +2,11 @@
 
 <PageTitle>Counter</PageTitle>
 
-<h1>Counter</h1>
+<h1>The New Counter</h1>
 
 @code{
-    
+    protected override Task OnInitializedAsync()
+    {
+        return base.OnInitializedAsync();
+    }
 }
