Clean up projects

--- a/MyBlazorInAction05/BiA02/Core/Features/Counter/CounterPage.razor
+++ b/MyBlazorInAction05/BiA02/Core/Features/Counter/CounterPage.razor
@@ -2,7 +2,7 @@
 
 <PageTitle>Counter</PageTitle>
 
-<h1>The New Counter</h1>
+<h1>My New Counter</h1>
 
 @code{
     protected override Task OnInitializedAsync()
