--- a/MyBlazorInAction05/BFS01/Server/Pages/Host.cshtml
+++ b/MyBlazorInAction05/BFS01/Server/Pages/Host.cshtml
@@ -11,7 +11,7 @@
     <title>Host</title>
 </head>
 <body>
-    <component type="typeof(Core.CoreRouting)" render-mode="ServerPrerendered" />
+    <component type="typeof(Core.CoreRoutingg)" render-mode="ServerPrerendered" />
         <script src="_framework/blazor.server.js"></script>
 
 </body>
