--- a/MyBlazorInAction05/BiA01/Core/Components/NavMenu.razor
+++ b/MyBlazorInAction05/BiA01/Core/Components/NavMenu.razor
@@ -3,7 +3,7 @@
         <div class="relative flex items-center justify-between h-12">
             <div class="absolute inset-y-0 left-0 flex items-center sm:hidden">
                 <!-- Mobile menu button-->
-                <HambergerButton IsNavMenuOpen="@isNavMenuOpen" ToggleNavMenu="@ToggleNavMenu" />
+                <HambergerButton IsNavMenuOpen="@(!isNavMenuOpen)" ToggleNavMenu="@ToggleNavMenu" />
             </div>
 
             <div class="flex items-center justify-center flex-1 sm:items-stretch sm:justify-start">
