--- a/MyBlazorInAction05/BiA02/Core/Shared/MainNavMenu.razor
+++ b/MyBlazorInAction05/BiA02/Core/Shared/MainNavMenu.razor
@@ -1,4 +1,4 @@
-<nav class=" bg-gray-300">
+<nav class="bg-gray-300">
     <div class="max-w-full px-2 mx-auto sm:px-4 lg:px-6">
         <div class="relative flex items-center justify-between h-10">
             <!-- hamberger icon -->
@@ -16,8 +16,7 @@
                 <div class="absolute inset-y-0 right-0 flex items-center pr-2 sm:ml-4 sm:pr-0">
                     <div class="hidden sm:block sm:ml-2">
                         <div class="flex space-x-4">
-                            <NavLink ActiveClass="active-btn" class="nav-btn" href="/" Match=NavLinkMatch.All>Home
-                            </NavLink>
+                            <NavLink ActiveClass="active-btn" class="nav-btn" href="/" Match=NavLinkMatch.All>Home</NavLink>
                             <NavLink ActiveClass="active-btn" class="nav-btn" href="/counter">Counter</NavLink>
                         </div>
                     </div>
